test/fixtures/type-error/typeError.ro
type int = ???
type boolean = ???
fun x(): int = false